Update README.md
Added run command to ReadMe