@@ -1,2 +1,8 @@
 # Manage-Computers
  Secure Java Programming
+
+
+run this command below in source folder
+
+java -cp .:Domain.jar -Djava.security.manager -Djava.security.policy=security.policy ManageComputers
+
